# learn_c

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: class.cpp  lambda.cpp  lambda.h  learn_class.cpp  learn_class.h  main.cpp  pointer.cpp  pointer.h  variadic_function.cpp  variadic_function.h
src/macro/: api.h  macro_api.cpp  macro_api.h
